# wasm-benchmark

./: Makefile  Readme.md
go/: go.mod  main.go
go-old/: go.mod  main.go
rust/: Cargo.toml
rust-old/: Cargo.toml
rust-wash/: README.md
rust-wash/src/: lib.rs
rust-wasmedge/: Cargo.toml
rust-wasmedge/src/: main.rs
rust-wasmer/: Cargo.toml  app.yaml  wasmer.toml
rust-wasmer/src/: main.rs
rust/src/: main.rs
