[package]
name = "rust-test"
version = "1.0.0"
authors = ["Sacha Morard <s@edgee.cloud>"]
description = "Edgee proxy test"
license = "None"
edition = "2021"

[[bin]]
name = "rust-server"
path = "src/main.rs"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }